--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
   background-color: #ffffff;
   margin: 10;
   font-family: 'Times New Roman', Helvetica, sans-serif;
-  background: url('../img/background.png') repeat;
+
 }
 
 .main {
@@ -14,6 +14,7 @@
     margin-right: auto;
     margin-bottom: 20px;
     min-height: 100%;
+    background: url('../img/background.png') repeat;
 }
 
 .login-blok{
@@ -99,4 +100,6 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+    background: url('../img/top.png') repeat;
 }
+
