--- a/static/css/base.css
+++ b/static/css/base.css
@@ -73,15 +73,26 @@
 	margin-right: -50%;
 }
 
-.head_table
+.doctype-header
+{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.doctype-table
+{
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.head-table
 {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
     margin-bottom: 10px;
-
 }
-
 
 .main-menu
 {
